Fixed some folia bugs